fix(Home): fix alignment of icons

--- a/client/containers/Home/home.scss
+++ b/client/containers/Home/home.scss
@@ -22,19 +22,19 @@
   }
 }
 
-.docs-home-sections {
-}
-
 .cui-landing-section {
   width: 100%;
   background: center center/150% no-repeat;
   @media #{$xlarge-up} {
     background-size: contain;
-  }  &__image {
+  }
+  &__image {
     padding: 2rem 2rem 0 2rem;
-    @include flex($jc: flex-end) img {
+    @include flex($jc: flex-end);
+    img {
       max-height: rem-calc(400);
     }
+
     @media #{$large-up} {
       flex: 0 0 41.667%;
       padding: 0;
@@ -74,13 +74,22 @@
         margin-bottom: rem-calc(16);
       }
       &__icon-links {
-        @include flex($fw: wrap, $jc: space-evenly);
+        @include flex($fw: wrap, $jc: center);
         margin-top: rem-calc(48);
       }
       &__icon-link {
         @include flex($fd: column);
         flex: 1 0 33.333%;
         margin-bottom: rem-calc(32);
+        text-align: center;
+
+        &--center {
+          flex: 1 0 33.333%;
+
+          @media #{$large-up} {
+            flex: 0 0 33.333%;
+          }
+        }
 
         .icon-link__image-container {
           display: flex;
